--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
   </main>
 
   <footer class="text-center py-8 mt-0">
-    <p>&copy; 2025 Morocco Cultural Journeys | Designed by Fahd Moussaif & Sami Nasry</p>
+    <p>&copy; 2025 Morocco Cultural Journeys | Designed by Fahd Moussaif & Sami Nasry & Samir Ait said</p>
     <p class="text-sm">An Unforgettable Exploration of Art, History, and Heritage</p>
   </footer>
 
